fix scrollbar

--- a/wcomp/scrollbox/ScrollBox.scss
+++ b/wcomp/scrollbox/ScrollBox.scss
@@ -91,10 +91,6 @@
         --percent-y: 0.0;
 
         //
-        scroll-timeline: --scroll-y vertical, --scroll-x horizontal !important;
-        scroll-timeline: --scroll-y block, --scroll-x inline !important;
-
-        //
         --sb-color: #101010;
 
         //
